--- a/3_js/1_语言基础/12_js_算数运算符.html
+++ b/3_js/1_语言基础/12_js_算数运算符.html
@@ -61,6 +61,10 @@
         其他都是一个道理。
     </div>
     <script>
+        x = 5;
+        x+= 6;
+        document.write('x+=6就是 x=x+6的意思，所以最后的值就等于: '+x);
+
 
     </script>
 
