--- a/3_js/1_语言基础/13_js_逻辑运算符.html
+++ b/3_js/1_语言基础/13_js_逻辑运算符.html
@@ -5,6 +5,64 @@
     <title>Title</title>
 </head>
 <body>
+<div>
+    <h4>示例1：基本逻辑运算符 </h4>
+    <div style="white-space: pre-wrap">
+        基本逻辑运算符 包含如下 ：
+        ==
+        !=
+        >
+        >=
+    </div>
+    <script>
+        function p(s){
+            document.write(s);
+            document.write("<br>");
+        }
+        p("1==2: "+(1==2));
+        p("1!=2: "+(1!=2));
+        p("1>2: "+(1>2));
+        p("1<2: "+(1<2));
+        p("1>=2: "+(1>=2));
+    </script>
+</div><hr/>
+
+<div>
+    <h4>示例 2 : 绝对等，绝对不等于 </h4>
+    <div style="white-space: pre-wrap">
+        与== 进行值是否相等的判断不同，绝对等 === 还会进行类型的判断
+        比如数字1 和 字符串 "1" 比较， 值是相等的。但是类型不同
+        所以==会返回true 但是 === 会返回false
+        绝对不等于 ！== 与上同理
+    </div>
+    <script>
+        function p(s){
+            document.write(s);
+            document.write("<br>");
+        }
+       p(`1=='1': ${1=='1'}`);
+        p(`1==='1': ${1==='1'}`);
+    </script>
+</div><hr/>
+
+
+<div>
+    <h4>示例 3 : 三目运算符 </h4>
+    <div style="white-space: pre-wrap">
+        三目运算符 ?: 有三个操作数
+        如果第一个返回true,就返回第二个操作符
+        否则就返回第三个操作符。
+    </div>
+
+    <script>
+       var age = 15;
+       var movie = age<18?"卡通":"你懂得";
+       document.write("使用?: 三相运算法进行判断. <br>");
+       document.write('age<18?"卡通":"你懂的" <br>表示当年纪小于18的时候，就看卡通，否则就看 你懂得<br>');
+       document.write('而age的变量的值是15，所以返回'+movie);
+    </script>
+</div>
+
 
 </body>
 </html>
