--- a/3_js/2_对象/1_js_数字.html
+++ b/3_js/2_对象/1_js_数字.html
@@ -5,6 +5,199 @@
     <title>Title</title>
 </head>
 <body>
+<h2>
+    js 中的对象是有着属性和方法的一种特殊数据类型
+</h2>
+<h3 style="white-space: pre-wrap">
+    常见的对象有数字number，字符串string，
+    日期Date, 数组Array等
+</h3>
+<hr>
+
+<div style="white-space: pre-wrap; display: inline">
+<h5 style="display: inline">关键字</h5>                          <h5 style="display: inline">简介</h5>
+    <hr/>
+new Number           创建一个数字对象
+    <hr/>
+属性MIN_VALUE         最小值，最大值
+属性MAX_VALUE
+    <hr/>
+属性NaN                表示不是数字
+    <hr/>
+方法 toFixed           返回一个数字的小数表达
+    <hr/>
+方法 toExponential     返回一个数字的科学计数法表达
+    <hr/>
+方法valueOf             答案-乘法
+    <hr/>
+</div>
+
+
+<hr/>
+<hr/>
+
+<div style=" background-color: lightblue;">
+    <h4>示例1： 创建一个数字对象</h4>
+    可以通new Number()创建一个数字 对象<br/>
+
+    与基本类型的数字不同，对象类型的数字，拥有更多的属性和方法
+    <br/>
+    <br/>
+    <br/>
+
+    <script>
+        var x = new Number(123);
+
+        document.write('数字对象x的值:'+x);
+        document.write("<br>");
+        document.write('数字对象x的类型:'+typeof x); //通过typeof 获知这是一个object
+        document.write("<br>");
+        document.write("<br>");
+        var y = 123;
+        document.write('基本类型y的值:'+y);
+        document.write("<br>");
+        document.write('基本类型y的类型:'+typeof y); //通过typeof 获知这是一个number
+
+    </script>
+
+</div>
+
+<br/>
+<div style="background-color: lightcyan">
+    <h4>示例2： Number 对象能过取得的最大和最小边界</h4>
+    <br/>
+    <script>
+        document.write('Number对象的最小值:'+Number.MIN_VALUE);
+        document.write("<br>");
+        document.write('Number对象的最大值:'+Number.MAX_VALUE);
+    </script>
+
+</div>
+
+
+
+
+<br/>
+<div style="background-color: lightgray">
+    <h4>示例3： 表示不是数字</h4>
+    <p style="white-space: pre-wrap;">
+        NaN(Not a Number),表示不是一个数字
+        当通过非数字创建Number的时候，就会得到NaN.
+        注意： 不能通过 是否等于Number.NaN来判断 是否 “不是一个数字”，应该使用函数 isNaN()
+
+    </p>
+    <br/>
+    <script>
+       function p(s){
+           document.write(s);
+           document.write("<br>");
+       }
+       var a = new Number("123abc"); //通过非数字创建Number对象，得到的是一个NaN
+       p('通过非数字字符串"123abc"创建出来的Number对象 a的值是：'+a);
+       p('但是, a==Number.NaN会返回:'+(a==Number.NaN)); //即便是一个NaN 也"不等于" Number.NaN
+       p('正确判断是否是NaN的方式是调用isNaN函数:'+isNaN(a)); //正确的方式是通过isNaN() 函数进行判断
+    </script>
+
+</div>
+<br/>
+
+
+<br/>
+<div style="background-color: lightgray">
+    <h4>示例4：返回一个数字的小数表达</h4>
+    <p style="white-space: pre-wrap;">
+        toFixed返回一个数字的小数表达
+    </p>
+    <br/>
+    <script>
+        function p(s){
+            document.write(s);
+            document.write("<br>");
+        }
+        var a = new Number("123");
+        p('通过非数字字符串"123abc"创建出来的Number对象 a的值是：'+a.toFixed(2));  //保留两位小数点
+        var b = new Number("3.1415926");
+        p("PI 通过toFixed(3) 保留三位小数:"+b.toFixed(3));//保留三位小数点
+    </script>
+
+</div>
+<br/>
+
+
+<br/>
+<div style="background-color: lightgray">
+    <h4>示例5：返回一个数字的科学计数法表达</h4>
+    <p style="white-space: pre-wrap;">
+        返回一个Number对象的科学计数法表达
+    </p>
+    <br/>
+    <script>
+        function p(s){
+            document.write(s);
+            document.write("<br>");
+        }
+        var a = new Number("123");
+        p('通过非数字字符串"123abc"创建出来的Number对象 a的值是：'+a.toExponential());  //保留两位小数点
+        var b = new Number("3.1415926");
+        p("PI 通过toFixed(3) 保留三位小数:"+b.toExponential());//保留三位小数点
+    </script>
+</div>
+<br/>
+
+
+
+<br/>
+<div style="background-color: lightgray">
+    <h4>示例6：返回一个数字对象的基本数字类型</h4>
+    <p style="white-space: pre-wrap;">
+        方法 valueOf() 返回一个基本类型的数字
+        通过typeof 判断数据类型可以发现，一种是object,一种是number
+    </p>
+    <br/>
+    <script>
+        function p(s){
+            document.write(s);
+            document.write("<br>");
+        }
+        var a = new Number("123");
+
+        var b = a.valueOf();
+
+        p('数字对象a的类型是: '+typeof a); //返回object
+
+        p(b);
+
+        p('通过valueOf()返回的值的类型是'+typeof b); //返回number
+
+    </script>
+</div>
+<br/>
+
+<br/>
+<div style="background-color: lightgray">
+    <h4>示例7：练习-乘法</h4>
+
+    <div style="display: inline">
+        <input id="num1" type="number" placeholder="enter a number"> * <input id="num2" type="number" placeholder="enter another number">
+        = <input id="res" > <input type="button" class="button" onclick="calc()" value="运算">
+
+    </div>
+
+    <script>
+        function calc(){
+            let num1 = document.getElementById("num1").value;
+            let num2 = document.getElementById("num2").value;
+            num1 = parseFloat(num1);
+            num2 = parseFloat(num2);
+            let res = num1*num2;
+            // document.getElementById("res").value = res.toExponential();
+            let num = new Number(res);
+            document.getElementById("res").value = num.toExponential();
+        }
+    </script>
+</div>
+<br/>
+
 
 </body>
 </html>
