--- a/3_js/2_对象/5_js_math.html
+++ b/3_js/2_对象/5_js_math.html
@@ -5,6 +5,140 @@
     <title>Title</title>
 </head>
 <body>
+<h4>Math是JavaScript的工具对象，用于常见的数学运算</h4>
+<h4 style="white-space: pre-wrap; border: black 1px solid;width: 500px;">
+    属性E PI       自然对数和圆周率
+    <hr/>
+    方法 abs        绝对值
+    <hr/>
+    方法 min max       最小最大
+    <hr/>
+    方法 pow         求幂
+    <hr/>
+    方法 round       四舍五入
+    <hr/>
+    方法 random      随机数
+
+</h4>
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray">
+    <h3>示例 1 : 自然对数和圆周率</h3>
+    属性E PI，分别表示自然对数和圆周率PI<br/>
+    <hr/>
+    <br/>
+
+    <script>
+        document.write(Math.E);
+        document.write("<br>");
+        document.write(Math.PI);
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray">
+    <h3>示例 2: 绝对值</h3>
+   <br/>
+    <hr/>
+    <br/>
+
+    <script>
+        document.write(Math.abs(-1));
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray">
+    <h3>示例 3: 最小最大</h3>
+    方法 min max 分别取最小值，最大值<br/>
+    <br/>
+    <hr/>
+    <br/>
+
+    <script>
+        document.write(Math.min(1,100));
+        document.write("<br>");
+        document.write(Math.max(1,100));
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray">
+    <h3>示例 4: 求幂</h3>
+    方法 pow 求一个数的n次方<br/>
+    <br/>
+    <hr/>
+    <br/>
+
+    <script>
+        document.write(Math.pow(16,2)); //3的立方，即27
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray">
+    <h3>示例 5: 四舍五入</h3>
+    方法 round,小数四舍五入取整<br/>
+    <br/>
+    <hr/>
+    <br/>
+
+    <script>
+        document.write(Math.round(3.4));
+        document.write("<br>");
+        document.write(Math.round(3.5));
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray">
+    <h3>示例 6: 随机数</h3>
+    方法 random 取0-1之间的随机数<br/>
+    <br/>
+    <hr/>
+    <br/>
+
+    <script>
+        document.write("一个 0-1 之间的随机数 : Math.random():");
+        document.write("<br>");
+        document.write(Math.random());
+        document.write("<br>");
+        document.write("十个 5-10 之间的随机数 : Math.round(Math.random() *5)+5 ");
+        document.write("<br>");
+        document.write(Math.round(Math.random()*5) +5);   //5-10之间的随机整数
+        document.write("<br>");
+
+
+
+    </script>
+</div>
+<hr/>
+<br/>
+
+
 
 </body>
 </html>
