--- a/3_js/3_BOM/1_js_widnow.html
+++ b/3_js/3_BOM/1_js_widnow.html
@@ -3,8 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <style>
+        /**{*/
+        /*    margin: 0;*/
+        /*    padding: 0;*/
+        /*}*/
+        /*body,html{*/
+        /*    width: 100%;*/
+        /*    height: 100%;*/
+        /*}*/
+    </style>
 </head>
 <body>
+<h1>BOM  即浏览器 对象模型（browser object model）</h1>
+
+<h3 style="white-space: pre-wrap; border: 1px black solid;">
+    浏览器对象包括：
+    Window（窗口）
+    Navigator （浏览器）
+    Screen （客户端屏幕）
+    History （访问历史）
+    Location （浏览器地址）
+</h3>
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 1 : 获取文档显示区域的高度和宽度</h3>
+    一旦页面加载，就会自动创建window对象，所以无需手动创建window对象。<br/>
+    通过window对象可以获取文档显示区域的高度和宽度<br/>
+    <hr/>
+    <br/>
+
+    <script>
+        document.write("文档内容");
+        document.write("<br>");
+        document.write("文档显示区域的宽度"+window.innerWidth);
+        document.write("<br>");
+        document.write("文档显示区域的高度"+window.innerHeight);
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 2 : 获取外部窗体的宽度和高度</h3>
+    所谓的外部窗体即浏览器，可能用的是360，火狐，IE, Chrome等等。<br/>
+
+    <hr/>
+    <br/>
+
+    <script>
+        document.write("浏览器的宽度:"+ window.outerWidth);
+        document.write("<br>");
+        document.write("浏览器的高度: "+window.outerHeight);
+
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 3 : 打开一个新的窗口</h3>
+    有的时候，你碰到一些网站会自动打开另一个网站，那么是怎么做到的呢? <br/>
+    就是通过window的open方法做到的 <br/>
+
+    <i>不建议使用</i>，如果需要打开一个新的网站，应该通过超级链接等方式让用户主动打开，在没有告知用户的前提下就打开一个新的网站会影响用户的体验
+
+
+    <hr/>
+    <br/>
+    <button onclick="openNewWindow()">打开一个新的窗口</button>
+    <script>
+        function openNewWindow(){
+            myWindow = window.open("http://www.baidu.com");
+        }
+    </script>
+</div>
+<hr/>
+<br/>
+
 
 </body>
 </html>
