--- a/3_js/3_BOM/2_js_navigator.html
+++ b/3_js/3_BOM/2_js_navigator.html
@@ -5,6 +5,42 @@
     <title>Title</title>
 </head>
 <body>
+<h3>Navigator即浏览器对象，提供浏览器相关的信息</h3>
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 1 : 打印浏览器相关信息</h3>
+   <br/>
+    <hr/>
+    <br/>
+
+    <script type="text/javascript">
+        document.write("<p>浏览器产品名称：");
+        document.write(navigator.appName + "</p>");
+
+        document.write("<p>浏览器版本号：");
+        document.write(navigator.appVersion + "</p>");
+
+        document.write("<p>浏览器内部代码：");
+        document.write(navigator.appCodeName + "</p>");
+
+        document.write("<p>操作系统：");
+        document.write(navigator.platform + "</p>");
+
+        document.write("<p>是否启用Cookies：");
+        document.write(navigator.cookieEnabled + "</p>");
+
+        document.write("<p>浏览器的用户代理报头：");
+        document.write(navigator.userAgent )
+
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+
 
 </body>
 </html>
